# garagejam

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  garagejam.spec  garagejam.spec.in  meson.build
data/: Makefile.am  Makefile.in  garagejam.appdata.xml.in  garagejam.desktop.in  garagejam.desktop.in.in  garagejam.gschema.xml.in  meson.build
data/icons/: Makefile.am  Makefile.in  meson.build
etc/: Makefile.am  Makefile.in  icecast-server.xml
po/: POTFILES.in  POTFILES.skip  nb.po
src/: Makefile.am  Makefile.in  garagejam-gingerblue-app.c  garagejam-gingerblue-app.h  garagejam-gingerblue-chord.h  garagejam-gingerblue-config.c  garagejam-gingerblue-config.h  garagejam-gingerblue-container.h  garagejam-gingerblue-file.c  garagejam-gingerblue-file.h  garagejam-gingerblue-knob.c  garagejam-gingerblue-knob.h  garagejam-gingerblue-library.h  garagejam-gingerblue-line.c  garagejam-gingerblue-line.h  garagejam-gingerblue-main-loop.c  garagejam-gingerblue-main-loop.h  garagejam-gingerblue-main.c  garagejam-gingerblue-main.h  garagejam-gingerblue-record.c  garagejam-gingerblue-record.h  garagejam-gingerblue-song.c  garagejam-gingerblue-song.h  garagejam-gingerblue-storage.h  garagejam-gingerblue-studio-config.c  garagejam-gingerblue-studio-config.h  garagejam-gingerblue-studio-location.c  garagejam-gingerblue-studio-location.h  garagejam-gingerblue-studio-player.c  garagejam-gingerblue-studio-player.h  garagejam-gingerblue-studio-stream.c  garagejam-gingerblue-studio-stream.h  garagejam-gingerblue-wizard.h  garagejam.c  garagejam.h  garagejam.xml.in  meson.build
