bin_PROGRAMS = garagejam

garagejamdir = $(includedir)/garagejam

garagejam_DATA = garagejam.xml

garagejam_HEADERS = garagejam.h garagejam-gingerblue-app.h garagejam-gingerblue-chord.h garagejam-gingerblue-file.h garagejam-gingerblue-main.h garagejam-gingerblue-main-loop.h garagejam-gingerblue-config.h garagejam-gingerblue-knob.h garagejam-gingerblue-line.h garagejam-gingerblue-record.h garagejam-gingerblue-song.h garagejam-gingerblue-studio-config.h garagejam-gingerblue-studio-stream.h garagejam-gingerblue-wizard.h garagejam-gingerblue-storage.h garagejam-gingerblue-container.h garagejam-gingerblue-library.h garagejam-gingerblue-studio-player.h garagejam-gingerblue-studio-player-kb.h garagejam-gingerblue-studio-location.h

garagejam_SOURCES = garagejam.c garagejam-gingerblue-app.c garagejam-gingerblue-config.c garagejam-gingerblue-file.c garagejam-gingerblue-main.c garagejam-gingerblue-main-loop.c garagejam-gingerblue-knob.c garagejam-gingerblue-line.c garagejam-gingerblue-record.c garagejam-gingerblue-song.c garagejam-gingerblue-studio-config.c garagejam-gingerblue-studio-location.c garagejam-gingerblue-studio-player.c garagejam-gingerblue-studio-stream.c

garagejam_CFLAGS = $(GARAGEJAM_CFLAGS)

garagejam_LDADD = $(GARAGEJAM_LIBS)

EXTRA_DIST = garagejam.xml.in meson.build
